# AgentAIO

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.claude/skills/add-app-event-and-hook/: SKILL.md
.claude/skills/add-llm-provider/: SKILL.md
.claude/skills/add-storage-table-repository/: SKILL.md
.claude/skills/add-tauri-command/: SKILL.md
.claude/skills/new-feature-panel/: SKILL.md
.claude/skills/ship-phases/: SKILL.md
docs/feature-audit/: DESKTOP-E2E.md  README.md  user-stories.csv
docs/superpowers/plans/: 2026-06-18-acc-phase1a-foundation.md  2026-06-18-acc-phase1b-llm-agents.md  2026-06-18-acc-phase1c-canvas-ui.md  2026-06-19-workflow-builder-w1.md  2026-06-19-workflow-builder-w2.md  PROGRESS.md  (+1 more)
e2e/: app-shell.spec.ts
e2e-desktop/: claude-code-repo.mjs  claudecode-fixed.mjs  codingagent.mjs  connect.mjs  diag-settings.mjs  diag.mjs  diag2.mjs  feature2.mjs  full-suite.mjs  mcp-sse-toolloop.mjs  mcp-toolloop.mjs  ollama-toolloop.mjs  repo-access.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: fs.rs  keychain.rs  mod.rs  process.rs  skills.rs  vault.rs
src/app/: layout.tsx  page.tsx
src/hooks/: useAgentActions.ts  useAgentAssignments.ts  useAgentCounts.ts  useAgentStatus.ts  useApprovals.ts  useInstalledMcps.ts  useInstalledTools.ts  useSkills.ts  useWorkflowRun.ts
src/lib/: event-bus.ts  fs.ts  keychain.ts  platform.ts  skills.ts  utils.ts
(+199 files in other folders)
