[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Encrypted-at-rest app DB (SQLCipher). Vendored OpenSSL keeps the build self
# contained; on Windows this needs a complete Perl on PATH (Strawberry) but NOT
# nasm (openssl-src falls back to no-asm). See src/commands/vault.rs.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
keyring = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[features]
# Opt-in: turns on tauri's `test` feature (headless MockRuntime) so the
# `#[command]` process functions can be exercised end-to-end via a mock
# AppHandle. Kept OFF by default because, on the current Windows toolchain, a
# test binary linked with tauri's `test` feature fails to load with
# STATUS_ENTRYPOINT_NOT_FOUND (an environmental/manifest issue, not a code one),
# which would break the whole `cargo test` run. Enable on Linux/CI:
#   cargo test --features mock-runtime-tests
mock-runtime-tests = ["tauri/test"]
